test/bad/res1.pacc
/*
nopacc 7:21 'expected Defns, or end-of-input'
*/

/* Results may once again appear only at the end of a sequence. */

S ← "foo" → qux "bar"
